--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server  --content-base --inline --hot ",
+    "serve":"node server/server.js",
     "test": "test"
   },
   "repository": {
@@ -22,6 +23,8 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "hapi": "^16.6.2",
+    "inert": "^3.2.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "webpack": "^3.8.1"
