added i18n support intl-react dependancy

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server  --content-base --inline --hot ",
-    "serve":"node server/server.js",
+    "serve": "node server/server.js",
     "test": "test"
   },
   "repository": {
@@ -27,6 +27,7 @@
     "inert": "^3.2.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-intl": "^2.4.0",
     "webpack": "^3.8.1"
   },
   "devDependencies": {
