--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-react": "^6.24.1",
     "hapi": "^16.6.2",
     "inert": "^3.2.0",
+    "node-sass": "^4.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-intl": "^2.4.0",
@@ -34,6 +35,10 @@
     "webpack": "^3.8.1"
   },
   "devDependencies": {
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
     "webpack-dev-server": "^2.9.4"
   }
 }
