--- a/package.json
+++ b/package.json
@@ -25,20 +25,21 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "hapi": "^16.6.2",
-    "inert": "^3.2.0",
+    "inert": "^5.1.2",
     "node-sass": "^4.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-intl": "^2.4.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "webpack": "^3.8.1"
+    "webpack": "^3.8.1",
+    "webpack-cli": "^3.3.0"
   },
   "devDependencies": {
-    "css-loader": "^0.28.7",
+    "css-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
-    "webpack-dev-server": "^2.9.4"
+    "webpack-dev-server": "^3.2.1"
   }
 }
