--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "webpack-dev-server  --content-base --inline --hot && webpack -d",
     "serve": "node server/server.js",
     "build": "webpack -d",
-    "test": "test"
+    "test": "test",
+    "dev": "webpack --mode development",
+    "prod": "webpack --mode production",
+    "webpack": "webpack"
   },
   "repository": {
     "type": "git",
@@ -32,14 +35,13 @@
     "react-intl": "^2.4.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "webpack": "^3.8.1",
+    "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0"
   },
   "devDependencies": {
     "css-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0",
-    "webpack-dev-server": "^3.2.1"
+    "style-loader": "^0.19.0"
   }
 }
