--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "react-xui for employee db mysql sample",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server  --content-base --inline --hot && webpack -d",
+    "start": "webpack-dev-server --open --mode development",
     "serve": "node server/server.js",
-    "build": "webpack -d",
+    "build": "webpack --mode development",
     "test": "test",
     "dev": "webpack --mode development",
     "prod": "webpack --mode production",
@@ -24,24 +24,30 @@
   "homepage": "https://github.com/keshav-chaure/react-xui#readme",
   "dependencies": {
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "hapi": "^16.6.2",
     "inert": "^5.1.2",
-    "node-sass": "^4.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-intl": "^2.4.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^7.1.5",
     "css-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^3.0.2",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0"
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.19.0",
+    "webpack": "^4.29.6",
+    "webpack-dev-server": "^3.2.1"
   }
 }
